syntax = "proto3";

package data.game_state;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

enum GameMode {
    GAME_MODE_UNSPECIFIED = 0;
    GAME_MODE_CLASSIC = 1;
}

message GameState {
    google.protobuf.Timestamp start_time = 1;
    google.protobuf.Timestamp end_time = 2;

    bool paused = 3;

    int32 flag_lifetime_rounds = 4;
    google.protobuf.Duration round_duration = 5;

    data.game_state.GameMode mode = 6;

    int32 running_round = 7;
    google.protobuf.Timestamp running_round_start = 8;
}

message GetRequest {}

message GetResponse {
    data.game_state.GameState game_state = 1;
}

message GetRoundRequest {}

message GetRoundResponse {
    int32 running_round = 1;
}
